[tool.poetry]
name = "sqlalchemy-sandbox"
version = "0.1.0"
description = ""
authors = ["Niten Nashiki <n.nashiki.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.0"
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
taskipy = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
