[tool.poetry]
name = "sqlalchemy-sandbox"
version = "0.1.0"
description = ""
authors = ["Niten Nashiki <n.nashiki.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = {extras = ["tz"], version = "^1.8.1"}
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
taskipy = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
black = { cmd = "black app && black migrations", use_vars = true }
isort = { cmd = "isort app && isort migrations", use_vars = true }
fmt = { cmd = "task black && task isort", help = "format code" }
